--- a/index.html
+++ b/index.html
@@ -4,29 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
-  <title>Expanding cards
-  </title>
+  <link rel="stylesheet" href="style.css">
+  <title>Progress</title>
 </head>
 <body>
   <div class="container">
-    <div class="panel active" style="background-image: url('https://images.pexels.com/photos/7527825/pexels-photo-7527825.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
-      <h3 class="h3-active">Nature</h3>
+    <div class="progress-container">
+      <div class="progress" id="progress"></div>
+      <div class="circle active">1</div>
+      <div class="circle">2</div>
+      <div class="circle">3</div>
+      <div class="circle">4</div>
     </div>
-    
-    <div class="panel" style="background-image: url('https://images.pexels.com/photos/2666467/pexels-photo-2666467.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
-      <h3>Woman</h3>
-    </div>
-
-    <div class="panel" style="background-image: url('https://images.pexels.com/photos/7217431/pexels-photo-7217431.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
-      <h3>City</h3>
-    </div>
-
-    <div class="panel" style="background-image: url('https://images.pexels.com/photos/7452349/pexels-photo-7452349.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')">
-      <h3>Food</h3>
-    </div>
+    <button class="btn" id="prev" disabled>Prev</button>
+    <button class="btn" id="next">Next</button>
   </div>
-
- <script src="app.js"></script> 
+  
+  <script src="./app.js"></script>
 </body>
 </html>
