--- a/Day-3-Counter/index.html
+++ b/Day-3-Counter/index.html
@@ -19,6 +19,7 @@
       </div>
       <div class="btn-group">
         <i class="fas fa-plus-circle btn" id="plus"></i>
+        <button class="reset-btn">Reset</button>
         <i class="fas fa-minus-circle btn" id="minus"></i>
       </div>
     </div>
