--- a/Day-6-Modal-Box/index.html
+++ b/Day-6-Modal-Box/index.html
@@ -20,11 +20,12 @@
         <h4>Click below to get a cool recipe</h4>
     </header>
     <!-- floating icon -->
-    <i class="far fa-hand-point-down"></i>
+    <i class="far fa-hand-point-down hand"></i>
     <main>
         <!-- modal section -->
         <section id="modal-sec">
             <div class="modal-cont">
+                <i class="fas fa-window-close" id="close"></i>
                 <h1 class="recipe-title">Title of recipe here</h1>
                 <img src="https://images.pexels.com/photos/461198/pexels-photo-461198.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="img">
                 <p class="desc">description will go here</p>
