--- a/Day-13-Quran-Chapter/index.html
+++ b/Day-13-Quran-Chapter/index.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Quran chapters or surah</title>
 </head>
 <body>
   <div id="card">
     <h1 class="title">Chapter/Surah Of The Day!!</h1>
     <h3 id="chapter" class="chapter">// Click on "Get chapter of the day" button to start :)</h3>
+    <i class="far fa-hand-point-down"></i>
     <button id="btn" class="btn">Get chapter of the day</button>
   </div>
   <script src="App.js"></script>
