--- a/Day_21_Wikipedia_Search/index.html
+++ b/Day_21_Wikipedia_Search/index.html
@@ -8,14 +8,15 @@
   <title>Wikipedia Search</title>
 </head>
 <body>
-  <header>Wekipedia Search</header>
-  <form id="form">
-    <input type="text" name="text" id="text" >
-    <button type="submit" class='btn'>Search</button>
-  </form>
-  <div id="results">
-    I will dinamically show results here
-  </div>
+ <header>
+      <img src="./img/Wikipedia-logo.png">
+     <h3>Wekipedia Search</h3>
+    </header>
+    <form id="form">
+      <input type="text" name="text" id="text" placeholder="Search Wikipedia..."/>
+      <button type="submit" class="btn">Search</button>
+    </form>
+    <div id="results"></div>
   <script src="App.js"></script>
 </body>
 </html>
