--- a/Day_24_Password_generator/index.html
+++ b/Day_24_Password_generator/index.html
@@ -15,6 +15,9 @@
   <div class="container">
     <input type="text" name="pass" id="pass" disabled placeholder="Password...">
     <button class="btn">Generate Password</button>
+    <div class="update-container">
+      <label for="updatePassword">Update password length: <input type="number" name="update" id="update" value="8" min="8" max="50"></label>
+    </div>
   </div>
   <script src="App.js"></script>
 </body>
